--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cookie": "^0.7.2",
     "glob": "^11.0.0",
     "lostnfoundfront": "file:",
+    "ngx-filter-pipe": "^3.0.1",
+    "ngx-pagination": "^6.0.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.24.0",
     "rxjs": "~7.8.0",
